--- a/Apps/Android/app/src/main/res/xml/root_preferences.xml
+++ b/Apps/Android/app/src/main/res/xml/root_preferences.xml
@@ -15,9 +15,9 @@
 
         <SwitchPreference
             android:defaultValue="false"
-            android:key="voiceControl"
+            android:key="@string/voiceControlKey"
             android:title="@string/voiceControl"
-            android:summary="@string/buttonPositionSummary">
+            >
         </SwitchPreference>
 
         <SwitchPreference
@@ -32,8 +32,7 @@
             app:entryValues="@array/buttonsPosition_values"
             app:key="@string/buttonsPositionKey"
             app:title="@string/buttonsPosition"
-            android:summary="@string/buttonPositionSummary"
-            app:useSimpleSummaryProvider="false" />
+            app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
 
